--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
+# Core dependencies with compatible versions
 runpod>=1.5.0
-torch>=2.0.0
-torchaudio>=2.0.0
-nemo_toolkit[asr]>=2.2.0
-numpy>=1.21.0
-librosa>=0.9.0
+numpy>=1.21.0,<2.0.0
+
+# PyTorch ecosystem - use compatible versions
+torch==2.3.1
+torchaudio==2.3.1
+torchvision==0.18.1
+
+# NeMo and dependencies - pin compatible versions
+nemo_toolkit[asr]==2.2.0
+omegaconf>=2.3.0,<2.4.0
+hydra-core>=1.3.0,<1.4.0
+pytorch-lightning>=2.0.0,<2.4.0
+
+# Audio processing
+librosa>=0.9.0,<0.11.0
 soundfile>=0.12.0
-omegaconf>=2.3.0
-hydra-core>=1.3.0
-pytorch-lightning>=2.0.0
-transformers>=4.30.0
-huggingface_hub>=0.16.0
+
+# ML/AI libraries with version constraints
+transformers>=4.30.0,<5.0.0
+huggingface_hub>=0.16.0,<1.0.0
+
+# Fix common dependency conflicts
+protobuf>=4.21.0,<5.0.0
+typer>=0.3.0,<0.10.0
+
+# Additional stability fixes
+requests>=2.25.0
+packaging>=20.0
