Add smart silence-based chunking to handler
- Integrated smart silence detection for optimal chunk boundaries
- Format-specific chunk sizes (MP3: 5min, WAV: 3min)
- Automatic silence point detection with 30% deviation tolerance
- Fallback to time-based splitting if pydub unavailable
- Added pydub dependency for silence detection
- Maintains compatibility with existing API interface
- Improved transcription quality by avoiding mid-word cuts

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,22 @@ Thumbs.db
 # Test outputs
 test_output.json
 transcription_*.json
+*.txt
+chunks/
+smart_chunks/
+*test*.py
+debug*.py
+*debug*
+calculate_optimal_chunks.py
+check_results.py
+clean_word_diff.py
+compare_transcriptions.py
+convert_mp3_to_wav.py
+create_test_audio.py
+find_word_difference.py
+find_word_timestamps.py
+fix_audio.py
+smart_split_transcribe.py
+split_and_transcribe.py
+verify_audio.py
+handler_old.py
