Add NeMo Speaker Diarization support to Parakeet API
- Integrated speaker diarization with optional use_diarization flag
- Added cascaded diarization pipeline using NeMo models
- Supports automatic speaker detection or specified speaker count
- Speaker-segmented transcription with accurate timestamps
- Fallback to regular transcription if diarization fails
- Added test script for both regular and diarized workflows
- Enhanced API response format for speaker-labeled transcripts

--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,7 @@ transcription_*.json
 chunks/
 smart_chunks/
 *test*.py
+!test_diarization_api.py
 debug*.py
 *debug*
 calculate_optimal_chunks.py
