Fix NeMo diarization implementation and add test resources
- Fixed manifest format from dict to list (required by NeMo)
- Simplified diarization model loading using ClusteringDiarizer auto-loading
- Added test payload examples for different modes
- Added cURL test commands for production testing
- Enhanced error handling and fallback mechanisms
- Ready for production deployment with both regular and diarized transcription

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,8 @@ chunks/
 smart_chunks/
 *test*.py
 !test_diarization_api.py
+!test_payload_examples.json
+!curl_test_commands.sh
 debug*.py
 *debug*
 calculate_optimal_chunks.py
