--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ celerybeat.pid
 
 # Environments
 .env
+.env.*
 .venv
 env/
 venv/
@@ -119,8 +120,15 @@ chunks/
 smart_chunks/
 *test*.py
 !test_diarization_api.py
+!test_with_hf_token.py
 !test_payload_examples.json
 !curl_test_commands.sh
+
+# Sensitive files (tokens, keys, etc.)
+*token*
+*key*
+*secret*
+config_private.py
 debug*.py
 *debug*
 calculate_optimal_chunks.py
