Fix: Add comprehensive NeMo/Parakeet dependencies
- Added lhotse, numpy, soundfile, omegaconf, pyyaml, tqdm, requests
- Added transformers, sentencepiece, scikit-learn, matplotlib, soxr
- Organized Dockerfile installation order for optimal dependency resolution
- Fixes 'No module named lhotse' and other missing dependency errors
- Ensures complete NeMo toolkit and Parakeet ASR model support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
 runpod>=1.5.0
+torch
+torchaudio
 hydra-core
+lhotse
 nemo_toolkit
+numpy
+soundfile
+omegaconf
+pyyaml
+tqdm
+requests
+transformers
+sentencepiece
+scikit-learn
+matplotlib
+soxr
 pydub
 pyannote.audio
