Fix: Add comprehensive dependency list including librosa
- Added librosa and complete set of NeMo/Parakeet dependencies
- Includes: librosa, resampy, pandas, joblib, pooch, numba, llvmlite,
  platformdirs, future, lazy_loader
- Organized Dockerfile installation order for dependency resolution
- Should resolve all remaining 'No module named' errors
- Complete dependency coverage for audio processing, ML, and ASR evaluation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
 runpod>=1.5.0
 torch
 torchaudio
-hydra-core
-lhotse
 nemo_toolkit
-numpy
-soundfile
+hydra-core
 omegaconf
 pyyaml
-tqdm
-requests
-transformers
-sentencepiece
-scikit-learn
-matplotlib
+lhotse
+numpy
+soundfile
+librosa
 soxr
+resampy
 jiwer
+tqdm
+scikit-learn
+pandas
+sentencepiece
+transformers
+joblib
+pooch
+numba
+llvmlite
+platformdirs
+future
+requests
 pydub
+lazy_loader
+matplotlib
 pyannote.audio
